--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
 
 <body>
 	<script src="https://cdn.bootcss.com/vue/2.4.4/vue.js"></script>
+	<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<script>
 		wechat = {
 			setWxConfig: function () {
