--- a/test.html
+++ b/test.html
@@ -13,9 +13,70 @@
 	<div>微信分享</div>
 
 
-	<!-- <script src="https://cdn.bootcss.com/vue/2.4.4/vue.js"></script> -->
+	<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 	<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<script>
+		var weixinConfigData = {};
+		$(function () {
+			$.ajax({
+				type: "GET",
+				url: "/Api/Activity/GetWeixinAPIConfig",
+				contentType: "application/json",
+				data: { "url": window.location.href },
+				success: function (data) {
+					weixinConfigData = data;
+					wx.config({
+						debug: false,
+						appId: weixinConfigData.AppId,
+						timestamp: weixinConfigData.Timestamp,
+						nonceStr: weixinConfigData.NonceStr,
+						signature: weixinConfigData.signature,
+						jsApiList: [
+							'checkJsApi',
+							'onMenuShareTimeline',
+							'onMenuShareAppMessage',
+							'onMenuShareQQ',
+							'onMenuShareWeibo',
+							'hideMenuItems',
+							'showMenuItems',
+							'hideAllNonBaseMenuItem',
+							'showAllNonBaseMenuItem',
+							'translateVoice',
+							'startRecord',
+							'stopRecord',
+							'onRecordEnd',
+							'playVoice',
+							'pauseVoice',
+							'stopVoice',
+							'uploadVoice',
+							'downloadVoice',
+							'chooseImage',
+							'previewImage',
+							'uploadImage',
+							'downloadImage',
+							'getNetworkType',
+							'openLocation',
+							'getLocation',
+							'hideOptionMenu',
+							'showOptionMenu',
+							'closeWindow',
+							'scanQRCode',
+							'chooseWXPay',
+							'openProductSpecificView',
+							'addCard',
+							'chooseCard',
+							'openCard'
+						]
+					});
+				},
+				error: function () {
+					//alert("weixin api error.");
+				}
+
+			});
+		});
+
+
 		window.WeixinShareMobile = {
 			weixinShare: function (param) {
 				wx.error(function (res) {
@@ -63,7 +124,8 @@
 			}
 		};
 
-		window.WeixinShareMobile.weixinShare({ shareTitle: "惠租车-驾照全球通国家查询", descContent: "[驾照全球通]全球自驾200国，顶级车行认证！", lineLink: 'https://m.huizuche.com/page/IDLinquire.html#/CountryIndex', imgUrl: "https://cdn-qiniu-app1.huizuche.com/2.6/logo_share.jpg" });
+		var shareObj = { shareTitle: "惠租车-驾照全球通国家查询", descContent: "[驾照全球通]全球自驾200国，顶级车行认证！", lineLink: 'https://m.huizuche.com/page/IDLinquire.html#/CountryIndex', imgUrl: "https://cdn-qiniu-app1.huizuche.com/2.6/logo_share.jpg" };
+		window.WeixinShareMobile.weixinShare(shareObj);
 
 	</script>
 </body>
