--- a/demo.html
+++ b/demo.html
@@ -89,18 +89,12 @@
         <img class="circle" src="./img/timg.png" alt="">
     </div> -->
     <div>
-        <a id="J-call-app" href="javascript:;" class="label">立即打开&gt;&gt;</a>
-    </div>
-    <div>
-        <a href="huizuche://" class="label">立即打开android&gt;&gt;</a>
+        <a href="huizuche://splash.app?openType=H5&url=https://m.baidu.com" class="label">立即打开android&gt;&gt;</a>
     </div>
     <div>
         <a href="huizuche://" class="label">立即打开ios&gt;&gt;</a>
     </div>
 
-    <div>点击连接
-        <a id="toAPP" onClick="javascript:openApp();" href="huizuche://?openType=H5&url=https://m.baidu.com">打开惠租车</a>
-    </div>
 
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     <script>
@@ -121,7 +115,7 @@
             }
 
         }
-        openApp()
+        // openApp()
 
 
     // var timeout;
