--- a/demo.html
+++ b/demo.html
@@ -92,6 +92,9 @@
         <a href="huizuche://splash.app?openType=H5&url=https://m.baidu.com" class="label">立即打开android&gt;&gt;</a>
     </div>
     <div>
+        <a href="huizuche://?openType=H5&url=https://m.baidu.com" class="label">立即打开android没有host&gt;&gt;</a>
+    </div>
+    <div>
         <a href="huizuche://" class="label">立即打开ios&gt;&gt;</a>
     </div>
 
