--- a/demo.html
+++ b/demo.html
@@ -101,6 +101,7 @@
 
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     <script>
+        alert(location.origin)
         // w = function (e) {
         //     return m.commonChecks.isIOS ? m.commonChecks.isWeixin ? e.weixin.iOS : e.web.iOS : m.commonChecks.isWeixin ? e.weixin.Android : e.web.Android
         // }
