--- a/demo.html
+++ b/demo.html
@@ -88,6 +88,8 @@
     <div>
         <img class="circle" src="./img/timg.png" alt="">
     </div> -->
+
+    <a href="/test.html">去新的测试页面</a>
     <div>
         <a href="huizuche://splash.app?openType=H5&url=https://m.baidu.com" class="label">立即打开android&gt;&gt;</a>
     </div>
