--- a/test.html
+++ b/test.html
@@ -18,125 +18,125 @@
 	<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 	<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<script>
-		window.history.pushState('forward', '', 'http://m.huizuche.com')
+		alert(window.location.origin)
 		$(".return").on('click', function () {
-			window.history.go(-1)
+			window.history.go(-2)
 		})
 
 
 
 
 
-		var weixinConfigData = {};
-		$(function () {
-			$.ajax({
-				type: "GET",
-				url: "/Api/Activity/GetWeixinAPIConfig",
-				contentType: "application/json",
-				data: { "url": window.location.href },
-				success: function (data) {
-					weixinConfigData = data;
-					wx.config({
-						debug: false,
-						appId: weixinConfigData.AppId,
-						timestamp: weixinConfigData.Timestamp,
-						nonceStr: weixinConfigData.NonceStr,
-						signature: weixinConfigData.signature,
-						jsApiList: [
-							'checkJsApi',
-							'onMenuShareTimeline',
-							'onMenuShareAppMessage',
-							'onMenuShareQQ',
-							'onMenuShareWeibo',
-							'hideMenuItems',
-							'showMenuItems',
-							'hideAllNonBaseMenuItem',
-							'showAllNonBaseMenuItem',
-							'translateVoice',
-							'startRecord',
-							'stopRecord',
-							'onRecordEnd',
-							'playVoice',
-							'pauseVoice',
-							'stopVoice',
-							'uploadVoice',
-							'downloadVoice',
-							'chooseImage',
-							'previewImage',
-							'uploadImage',
-							'downloadImage',
-							'getNetworkType',
-							'openLocation',
-							'getLocation',
-							'hideOptionMenu',
-							'showOptionMenu',
-							'closeWindow',
-							'scanQRCode',
-							'chooseWXPay',
-							'openProductSpecificView',
-							'addCard',
-							'chooseCard',
-							'openCard'
-						]
-					});
-				},
-				error: function () {
-					//alert("weixin api error.");
-				}
+		// var weixinConfigData = {};
+		// $(function () {
+		// 	$.ajax({
+		// 		type: "GET",
+		// 		url: "/Api/Activity/GetWeixinAPIConfig",
+		// 		contentType: "application/json",
+		// 		data: { "url": window.location.href },
+		// 		success: function (data) {
+		// 			weixinConfigData = data;
+		// 			wx.config({
+		// 				debug: false,
+		// 				appId: weixinConfigData.AppId,
+		// 				timestamp: weixinConfigData.Timestamp,
+		// 				nonceStr: weixinConfigData.NonceStr,
+		// 				signature: weixinConfigData.signature,
+		// 				jsApiList: [
+		// 					'checkJsApi',
+		// 					'onMenuShareTimeline',
+		// 					'onMenuShareAppMessage',
+		// 					'onMenuShareQQ',
+		// 					'onMenuShareWeibo',
+		// 					'hideMenuItems',
+		// 					'showMenuItems',
+		// 					'hideAllNonBaseMenuItem',
+		// 					'showAllNonBaseMenuItem',
+		// 					'translateVoice',
+		// 					'startRecord',
+		// 					'stopRecord',
+		// 					'onRecordEnd',
+		// 					'playVoice',
+		// 					'pauseVoice',
+		// 					'stopVoice',
+		// 					'uploadVoice',
+		// 					'downloadVoice',
+		// 					'chooseImage',
+		// 					'previewImage',
+		// 					'uploadImage',
+		// 					'downloadImage',
+		// 					'getNetworkType',
+		// 					'openLocation',
+		// 					'getLocation',
+		// 					'hideOptionMenu',
+		// 					'showOptionMenu',
+		// 					'closeWindow',
+		// 					'scanQRCode',
+		// 					'chooseWXPay',
+		// 					'openProductSpecificView',
+		// 					'addCard',
+		// 					'chooseCard',
+		// 					'openCard'
+		// 				]
+		// 			});
+		// 		},
+		// 		error: function () {
+		// 			//alert("weixin api error.");
+		// 		}
 
-			});
-		});
+		// 	});
+		// });
 
 
-		window.WeixinShareMobile = {
-			weixinShare: function (param) {
-				wx.error(function (res) {
-				});
-				wx.ready(function () {
-					wx.onMenuShareAppMessage({
-						desc: param.descContent,
-						title: param.shareTitle,
-						link: param.lineLink,
-						imgUrl: param.imgUrl,
-						trigger: function (res) {
-							//alert('用户点击发送给朋友');
-						},
-						success: function (res) {
-							// alert('已分享');
+		// window.WeixinShareMobile = {
+		// 	weixinShare: function (param) {
+		// 		wx.error(function (res) {
+		// 		});
+		// 		wx.ready(function () {
+		// 			wx.onMenuShareAppMessage({
+		// 				desc: param.descContent,
+		// 				title: param.shareTitle,
+		// 				link: param.lineLink,
+		// 				imgUrl: param.imgUrl,
+		// 				trigger: function (res) {
+		// 					//alert('用户点击发送给朋友');
+		// 				},
+		// 				success: function (res) {
+		// 					// alert('已分享');
 
-						},
-						cancel: function (res) {
-							//alert('已取消');
-						},
-						fail: function (res) {
-							//alert(JSON.stringify(res));
-						}
-					});
-					wx.onMenuShareTimeline({
-						desc: param.descContent,
-						title: param.friendTitle == undefined ? param.shareTitle : param.friendTitle,
-						link: param.lineLink,
-						imgUrl: param.imgUrl,
-						trigger: function (res) {
-							//alert('用户点击发送给朋友');
-						},
-						success: function (res) {
-							//alert('已分享');
+		// 				},
+		// 				cancel: function (res) {
+		// 					//alert('已取消');
+		// 				},
+		// 				fail: function (res) {
+		// 					//alert(JSON.stringify(res));
+		// 				}
+		// 			});
+		// 			wx.onMenuShareTimeline({
+		// 				desc: param.descContent,
+		// 				title: param.friendTitle == undefined ? param.shareTitle : param.friendTitle,
+		// 				link: param.lineLink,
+		// 				imgUrl: param.imgUrl,
+		// 				trigger: function (res) {
+		// 					//alert('用户点击发送给朋友');
+		// 				},
+		// 				success: function (res) {
+		// 					//alert('已分享');
 
-						},
-						cancel: function (res) {
-							//alert('已取消');
-						},
-						fail: function (res) {
-							// alert(JSON.stringify(res));
-						}
-					});
-				});
-			}
-		};
+		// 				},
+		// 				cancel: function (res) {
+		// 					//alert('已取消');
+		// 				},
+		// 				fail: function (res) {
+		// 					// alert(JSON.stringify(res));
+		// 				}
+		// 			});
+		// 		});
+		// 	}
+		// };
 
-		var shareObj = { shareTitle: "惠租车-驾照全球通国家查询", descContent: "[驾照全球通]全球自驾200国，顶级车行认证！", lineLink: 'https://m.huizuche.com/page/IDLinquire.html#/CountryIndex', imgUrl: "https://cdn-qiniu-app1.huizuche.com/2.6/logo_share.jpg" };
-		window.WeixinShareMobile.weixinShare(shareObj);
+		// var shareObj = { shareTitle: "惠租车-驾照全球通国家查询", descContent: "[驾照全球通]全球自驾200国，顶级车行认证！", lineLink: 'https://m.huizuche.com/page/IDLinquire.html#/CountryIndex', imgUrl: "https://cdn-qiniu-app1.huizuche.com/2.6/logo_share.jpg" };
+		// window.WeixinShareMobile.weixinShare(shareObj);
 
 	</script>
 </body>
