--- a/demo.html
+++ b/demo.html
@@ -88,6 +88,7 @@
     <div>
         <img class="circle" src="./img/timg.png" alt="">
     </div> -->
+    <input type="text">
 
     <a href="/test/test.html">去新的测试页面</a>
     <div>
