--- a/demo.html
+++ b/demo.html
@@ -76,6 +76,11 @@
             -webkit-transform: rotate(360deg)
         }
     }
+
+    .new-input {
+        outline: none;
+        border-radius: 2px;
+    }
 </style>
 
 <body>
@@ -88,7 +93,7 @@
     <div>
         <img class="circle" src="./img/timg.png" alt="">
     </div> -->
-    <input type="text">
+    <input class="new-input" type="text" placeholder="输入信息">
 
     <a href="/test/test.html">去新的测试页面</a>
     <div>
