--- a/demo.html
+++ b/demo.html
@@ -79,8 +79,9 @@
 
     .new-input {
         outline: none;
-        border-radius: 2px;
+        border-radius: 0;
         border: 1px solid black;
+        background-color: #fff;
     }
 </style>
 
