--- a/demo.html
+++ b/demo.html
@@ -81,6 +81,7 @@
         outline: none;
         border-radius: 0;
         border: 1px solid black;
+        -webkit-appearance: none;
         background-color: #fff;
     }
 </style>
