--- a/demo.html
+++ b/demo.html
@@ -81,7 +81,9 @@
         outline: none;
         border-radius: 0;
         border: 1px solid black;
-        -webkit-appearance: none;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
     }
 </style>
 
