--- a/demo.html
+++ b/demo.html
@@ -81,9 +81,7 @@
         outline: none;
         border-radius: 0;
         border: 1px solid black;
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;
+        -webkit-appearance: none;
     }
 </style>
 
