--- a/demo.html
+++ b/demo.html
@@ -80,8 +80,8 @@
     .new-input {
         outline: none;
         border-radius: 0;
-        border: 1px solid black;
-        -webkit-appearance: none;
+        border: 0;
+        /* -webkit-appearance: none; */
     }
 </style>
 
