--- a/test.html
+++ b/test.html
@@ -44,6 +44,9 @@
 
 <body>
 
+	<input id="foo" value="https://github.com/zenorocha/clipboard.js.git">
+	<div class="copy" data-clipboard-target="#foo">点击复制</div>
+
 	<div class="wrap"></div>
 	<div>微信分享</div>
 	<div>微信分享</div>
@@ -53,7 +56,22 @@
 
 	<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 	<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
 	<script>
+
+		var clipboard = new ClipboardJS('.copy');
+		clipboard.on('success', function (e) {
+			alert('Action:', e.action);
+			alert('Text:', e.text);
+			alert('Trigger:', e.trigger);
+
+			e.clearSelection();
+		});
+
+		clipboard.on('error', function (e) {
+			console.error('Action:', e.action);
+			console.error('Trigger:', e.trigger);
+		});
 
 		$(".return").on('click', function () {
 			window.history.go(-2)
