--- a/test.html
+++ b/test.html
@@ -97,11 +97,14 @@
 	<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 	<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<!-- <script src="https://m.zuzuche.com/w/tidl/js/clipboard1_6/clipboard.min.js"></script> -->
-	<script src="https://cdn.bootcss.com/clipboard.js/2.0.0/clipboard.js"></script>
+	<!-- <script src="https://cdn.bootcss.com/clipboard.js/2.0.0/clipboard.js"></script> -->
+	<script src="https://cdn.bootcss.com/clipboard.js/1.6.0/clipboard.js"></script>
 	<script>
-		var clipboard1 = new ClipboardJS('.copy1', {
-			container: document.getElementById('foo1')
-		});
+		var clipboard1 = new Clipboard(".copy1", {
+			text: function () {
+				return $(".foo1").html()
+			}
+		})
 		clipboard1.on("success", function (t) {
 			alert('复制成功');
 		})
@@ -109,17 +112,17 @@
 			alert("复制失败")
 		});
 
-		// var clipboard2 = new Clipboard(".copy2", {
-		// 	text: function () {
-		// 		return $(".copy2").html()
-		// 	}
-		// })
-		// clipboard2.on("success", function (t) {
-		// 	alert('复制成功');
-		// })
-		// clipboard2.on('error', function (e) {
-		// 	alert("复制失败")
-		// });
+		var clipboard2 = new Clipboard(".copy2", {
+			text: function () {
+				return $(".foo2").val()
+			}
+		})
+		clipboard2.on("success", function (t) {
+			alert('复制成功');
+		})
+		clipboard2.on('error', function (e) {
+			alert("复制失败")
+		});
 
 
 		$(".return").on('click', function () {
