--- a/test.html
+++ b/test.html
@@ -73,7 +73,7 @@
 	<!--复制测试-->
 	<div id="foo1">这是一个复制文本</div>
 	<br>
-	<div class="copy1" data-clipboard-target="#foo1">点击复制1</div>
+	<div class="copy1">点击复制1</div>
 	<br>
 
 	<input id="foo2" value="这是另一个复制文本">
@@ -102,7 +102,7 @@
 	<script>
 		var clipboard1 = new Clipboard(".copy1", {
 			text: function () {
-				return $(".foo1").html()
+				return $(".copy1").html()
 			}
 		})
 		clipboard1.on("success", function (t) {
