--- a/test.html
+++ b/test.html
@@ -73,7 +73,7 @@
 	<!--复制测试-->
 	<div id="foo1">这是一个复制文本</div>
 	<br>
-	<div class="J-browserLink">点击复制1</div>
+	<p class="J-browserLink" onclick="">点击复制1</p>
 	<br>
 
 	<input id="foo2" value="这是另一个复制文本">
