--- a/test.html
+++ b/test.html
@@ -73,7 +73,7 @@
 	<!--复制测试-->
 	<div id="foo1">这是一个复制文本</div>
 	<br>
-	<p class="J-browserLink" onclick="">点击复制1</p>
+	<p class="J-browserLink" style="cursor: pointer;">点击复制1</p>
 	<br>
 
 	<input id="foo2" value="这是另一个复制文本">
@@ -96,9 +96,9 @@
 
 	<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 	<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-	<script src="https://m.zuzuche.com/w/tidl/js/clipboard1_6/clipboard.min.js"></script>
+	<!-- <script src="https://m.zuzuche.com/w/tidl/js/clipboard1_6/clipboard.min.js"></script> -->
 	<!-- <script src="https://cdn.bootcss.com/clipboard.js/2.0.0/clipboard.js"></script> -->
-	<!-- <script src="https://cdn.bootcss.com/clipboard.js/1.6.0/clipboard.js"></script> -->
+	<script src="https://cdn.bootcss.com/clipboard.js/1.6.0/clipboard.js"></script>
 	<script>
 
 		var clipboard1 = new Clipboard(".J-browserLink", {
