--- a/test.html
+++ b/test.html
@@ -67,9 +67,21 @@
 		z-index: 2;
 		line-height: 38px;
 	}
+
+	.visibility {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		visibility: hidden;
+	}
 </style>
 
 <body>
+	<!--visibility测试-->
+	<div class="visibility"></div>
+
 	<!--复制测试-->
 	<div id="foo1">这是一个复制文本</div>
 	<br>
