--- a/test.html
+++ b/test.html
@@ -174,7 +174,10 @@
 	<!-- <script src="https://cdn.bootcss.com/clipboard.js/2.0.0/clipboard.js"></script> -->
 	<script src="https://cdn.bootcss.com/clipboard.js/1.6.0/clipboard.js"></script>
 	<script>
-
+		var arr = [];
+		if (arr && arr.length > 0) {
+			console.log(123)
+		}
 		var clipboard1 = new Clipboard(".J-browserLink", {
 			text: function () {
 				return $(".J-browserLink").html()
